--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
       <div class="row justify-content-between">
         <div class="col-1">
          <button class="slider-button slider-button-prev">
-           <img src="/img/Arrow-prev.svg" alt="icon: arrow-prev">
+           <img src="img/Arrow-prev.svg" alt="icon: arrow-prev">
          </button>   
         </div>
         <div class="col-1">
          <button class="slider-button slider-button-next">
-           <img src="/img/Arrow-next.svg" alt="icon: arrow-next">
+           <img src="img/Arrow-next.svg" alt="icon: arrow-next">
          </button> 
         </div>
       </div>
