--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <p class="card-text">Bags & Acsessories & Lingerie & Sportswear & Beauty & Swimwear</p>
         <button class="button">
           <span class="button-text">View all</span>
-          <img src="/img/arrow.svg" alt=":icon arrow class="button-icon">
+          <img src="img/arrow.svg" alt=":icon arrow class="button-icon">
         </button>
       </div>
     </div>
@@ -154,7 +154,7 @@
         <p class="card-text text-light">Sweaters & Hoodies & Puffer Jackets & Coats and Jackets & Knit</p>
         <button class="button">
           <span class="button-text">View all</span>
-          <img src="/img/arrow.svg" alt=":icon arrow class=" button-icon">
+          <img src="img/arrow.svg" alt=":icon arrow class=" button-icon">
         </button>
       </div>
     </div>
